--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="register">REGISTER</string>
     <string name="show_more">Show More</string>
     <string name="search">Search</string>
+    <string name="categories">Categories</string>
 </resources>
