make single meal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="show_more">Show More</string>
     <string name="search">Search</string>
     <string name="categories">Categories</string>
+    <string name="ingredient">Ingredient</string>
+    <string name="instructions">Instructions</string>
+    <string name="category">Category</string>
+    <string name="country">Country</string>
+    <string name="ingredients">Ingredients</string>
 </resources>
