--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="home">Home</string>
     <string name="favourite">Favourite</string>
     <string name="plan">Plan</string>
+    <string name="day_of_meal">Day Of Meal</string>
 </resources>
