finish move in home screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,7 @@
         <span style="font-weight: bold;">%2$s</span>
     </small>
 </string>
+    <string name="meals">Meals</string>
+    <string name="meals_of_first_item">Meals Of %s</string>
 
 </resources>
