finish login and register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,6 @@
     <string name="meals">Meals</string>
     <string name="meals_of_first_item">Meals Of %s</string>
     <string name="search_for_your_meal">Search for your meal</string>
-    <string name="cooking_guide">Cooking Guide</string>
+    <string name="cooking_guide">Video</string>
 
 </resources>
