--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="meals_of_first_item">Meals Of %s</string>
     <string name="search_for_your_meal">Search for your meal</string>
     <string name="cooking_guide">Video</string>
-    <string name="skip">Skip</string>
+    <string name="skip">As Gust</string>
+    <string name="please_log_in_to_access_this_feature">Please log in to access this feature.</string>
 
 </resources>
