--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="or">or</string>
     <string name="already_a_member_log_in">Already a member? <b><u><font color="#006B5F">Log In</font></u></b></string>
     <string name="register">REGISTER</string>
-    <string name="show_more">Show More</string>
+    <string name="show_more"> <u>Show More</u></string>
     <string name="search">Search</string>
     <string name="categories">Categories</string>
     <string name="ingredient">Ingredient</string>
