--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="wednesday">Wednesday</string>
     <string name="thursday">Thursday</string>
     <string name="friday">Friday</string>
+    <string name="loading_login">Logging in…</string>
     <string-array name="days_of_week">
         <item>Saturday</item>
         <item>Sunday</item>
