--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="thursday">Thursday</string>
     <string name="friday">Friday</string>
     <string name="loading_login">Logging in…</string>
+    <string name="loading_sign_Up">Create an account...</string>
     <string-array name="days_of_week">
         <item>Saturday</item>
         <item>Sunday</item>
