enhance code of meal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="friday">Friday</string>
     <string name="loading_login">Logging in…</string>
     <string name="loading_sign_Up">Create an account...</string>
+    <string name="selected_planned_meal">\"Select day For add your meal \"</string>
+    <string name="choose_type_of_meal">Choose time of your meal</string>
     <string-array name="days_of_week">
         <item>Saturday</item>
         <item>Sunday</item>
