--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="selected_planned_meal">\"Select day For add your meal \"</string>
     <string name="choose_type_of_meal">Choose time of your meal</string>
     <string name="delete">Delete</string>
+    <string name="retry">Retry</string>
     <string-array name="days_of_week">
         <item>Saturday</item>
         <item>Sunday</item>
